--- a/src/templates/mitaka/murano.conf
+++ b/src/templates/mitaka/murano.conf
@@ -4,6 +4,18 @@ debug = {{ options.debug }}
 bind_host = {{ options.service_listen_info.murano_api.ip }}
 bind_port = {{ options.service_listen_info.murano_api.port }}
 
+{% if amqp.hosts -%}
+rabbit_hosts = {{ amqp.hosts }}
+{% else -%}
+rabbit_host = {{ amqp.host }}
+{% endif -%}
+rabbit_userid = {{ amqp.username }}
+rabbit_password = {{ amqp.password }}
+rabbit_virtual_host = {{ amqp.vhost }}
+
+[oslo_messaging_notifications]
+driver=messagingv2
+
 [database]
 connection = {{ shared_db.uri }}
 
@@ -25,7 +37,11 @@ username = {{ identity_service.service_username }}
 password = {{ identity_service.service_password }}
 {%- endif %}
 
-{% include "parts/section-rabbitmq-oslo" %}
+[rabbitmq]
+host = {{ amqp.host }}
+login = {{ amqp.username }}
+password = {{ amqp.password }}
+virtual_host = {{ amqp.vhost }}
 
 [murano]
 url = {{ options.external_endpoints.murano_api.url }}
