--- a/src/templates/mitaka/murano.conf
+++ b/src/templates/mitaka/murano.conf
@@ -47,7 +47,6 @@ virtual_host = {{ amqp.vhost }}
 url = {{ options.external_endpoints.murano_api.url }}
 
 [networking]
-
-external_network = ext_net
-router_name = murano_default_router 
+external_network = {{ options.ext_network }} 
+router_name = {{ options.router }}  
 create_router = true
