--- a/src/metadata.yaml
+++ b/src/metadata.yaml
@@ -1,31 +1,26 @@
-"name": "murano"
-"summary": "OpenStack Application Catalog Service"
-"maintainer": "OpenStack Charmers <openstack-charmers@list.ubuntu.com>"
-"description": "The Murano Project introduces an application catalog to OpenStack,\
-  \ \nenabling application developers and cloud administrators to publish\nvarious\
-  \ cloud-ready applications in a browsable categorized catalog\n"
-"tags":
-- "openstack"
-- "openstack"
-"requires":
-  "shared-db":
-    "interface": "mysql-shared"
-  "amqp":
-    "interface": "rabbitmq"
-  "identity-service":
-    "interface": "keystone"
-  "ha":
-    "interface": "hacluster"
-    "scope": "container"
-"peers":
-  "cluster":
-    "interface": "openstack-ha"
-"extra-bindings":
-  "public": !!null ""
-  "admin": !!null ""
-  "internal": !!null ""
-"series":
-- "xenial"
-- "trusty"
-- "yakkety"
-"subordinate": !!bool "false"
+name: murano
+summary: OpenStack Application Catalog Service
+maintainer: OpenStack Charmers <openstack-charmers@list.ubuntu.com>
+description: |
+  The Murano Project introduces an application catalog to OpenStack,
+  enabling application developers and cloud administrators to publish various
+  cloud-ready applications in a browsable categorized catalog
+tags:
+- openstack
+series:
+- trusty
+- xenial
+- yakkety
+requires:
+  shared-db:
+    interface: mysql-shared
+  amqp:
+    interface: rabbitmq
+  identity-service:
+    interface: keystone
+  ha:
+    interface: hacluster
+    scope: container
+peers:
+  cluster:
+    interface: openstack-ha
