--- a/src/templates/mitaka/murano.conf
+++ b/src/templates/mitaka/murano.conf
@@ -50,3 +50,4 @@ url = {{ options.external_endpoints.murano_api.url }}
 external_network = {{ options.ext_network }} 
 router_name = {{ options.router }}  
 create_router = true
+default_dns = {{ options.default_dns }}
