Updated murano.conf for sslY

--- a/src/templates/mitaka/murano.conf
+++ b/src/templates/mitaka/murano.conf
@@ -1,17 +1,8 @@
 [DEFAULT]
 debug = {{ options.debug }}
-
 bind_host = {{ options.service_listen_info.murano_api.ip }}
 bind_port = {{ options.service_listen_info.murano_api.port }}
-
-{% if amqp.hosts -%}
-rabbit_hosts = {{ amqp.hosts }}
-{% else -%}
-rabbit_host = {{ amqp.host }}
-{% endif -%}
-rabbit_userid = {{ amqp.username }}
-rabbit_password = {{ amqp.password }}
-rabbit_virtual_host = {{ amqp.vhost }}
+{% include "parts/rabbitmq" %}
 
 [oslo_messaging_notifications]
 driver=messagingv2
@@ -51,3 +42,8 @@ external_network = {{ options.ext_network }}
 router_name = {{ options.router }}  
 create_router = true
 default_dns = {{ options.default_dns }}
+
+[ssl]
+cert_file = {{ options.ssl_cert }}
+key_file = {{ options.ssl_key }}
+ca_file = {{ options.ssl_ca }}
