--- a/src/templates/mitaka/murano.conf
+++ b/src/templates/mitaka/murano.conf
@@ -44,6 +44,6 @@ create_router = true
 default_dns = {{ options.default_dns }}
 
 [ssl]
-cert_file = {{ options.ssl_cert }}
-key_file = {{ options.ssl_key }}
-ca_file = {{ options.ssl_ca }}
+#cert_file = {{ options.ssl_cert }}
+#key_file = {{ options.ssl_key }}
+#ca_file = {{ options.ssl_ca }}
