--- a/src/templates/mitaka/murano.conf
+++ b/src/templates/mitaka/murano.conf
@@ -11,7 +11,6 @@ driver=messagingv2
 connection = {{ shared_db.uri }}
 
 {% include "parts/section-keystone-authtoken" %}
-
 {% if identity_service.auth_host -%}
 admin_user = {{ identity_service.service_username }}
 admin_password = {{ identity_service.service_password }}
@@ -34,6 +33,8 @@ login = {{ amqp.username }}
 password = {{ amqp.password }}
 virtual_host = {{ amqp.vhost }}
 
+{% include "parts/section-rabbitmq-oslo" %}
+
 [murano]
 url = {{ options.external_endpoints.murano_api.url }}
 
@@ -42,8 +43,3 @@ external_network = {{ options.ext_network }}
 router_name = {{ options.router }}  
 create_router = true
 default_dns = {{ options.default_dns }}
-
-[ssl]
-#cert_file = {{ options.ssl_cert }}
-#key_file = {{ options.ssl_key }}
-#ca_file = {{ options.ssl_ca }}
