--- a/src/tox.ini
+++ b/src/tox.ini
@@ -1,47 +1,53 @@
-# Source charm: ./tox.ini
+# Source charm: ./src/tox.ini
 # This file is managed centrally by release-tools and should not be modified
 # within individual charm repos.
 [tox]
+envlist = pep8
 skipsdist = True
-envlist = pep8,py34,py35
-skip_missing_interpreters = True
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
          PYTHONHASHSEED=0
-         TERM=linux
-         LAYER_PATH={toxinidir}/layers
-         INTERFACE_PATH={toxinidir}/interfaces
-         JUJU_REPOSITORY={toxinidir}/build
-passenv = http_proxy https_proxy
+         AMULET_SETUP_TIMEOUT=2700
+whitelist_externals = juju
+passenv = HOME TERM AMULET_*
+deps = -r{toxinidir}/test-requirements.txt
 install_command =
-  pip install {opts} {packages}
-deps =
-    -r{toxinidir}/requirements.txt
-
-[testenv:build]
-basepython = python2.7
-commands =
-    charm-build --log-level DEBUG -o {toxinidir}/build src {posargs}
-
-[testenv:py34]
-basepython = python3.4
-deps = -r{toxinidir}/test-requirements.txt
-commands = ostestr {posargs}
-
-[testenv:py35]
-basepython = python3.5
-deps = -r{toxinidir}/test-requirements.txt
-commands = ostestr {posargs}
+  pip install --allow-unverified python-apt {opts} {packages}
 
 [testenv:pep8]
 basepython = python2.7
-deps = -r{toxinidir}/test-requirements.txt
-commands = flake8 {posargs} src unit_tests
+commands = charm-proof
+
+[testenv:func27-noop]
+# DRY RUN - For Debug
+basepython = python2.7
+commands =
+    bundletester -vl DEBUG -r json -o func-results.json --test-pattern "gate-*" -n --no-destroy
+
+[testenv:func27]
+# Run all gate tests which are +x (expected to always pass)
+basepython = python2.7
+commands =
+    bundletester -vl DEBUG -r json -o func-results.json --test-pattern "gate-*" --no-destroy
+
+[testenv:func27-smoke]
+# Run a specific test as an Amulet smoke test (expected to always pass)
+basepython = python2.7
+commands =
+    bundletester -vl DEBUG -r json -o func-results.json gate-basic-xenial-mitaka --no-destroy
+
+[testenv:func27-dfs]
+# Run all deploy-from-source tests which are +x (may not always pass!)
+basepython = python2.7
+commands =
+    bundletester -vl DEBUG -r json -o func-results.json --test-pattern "dfs-*" --no-destroy
+
+[testenv:func27-dev]
+# Run all development test targets which are +x (may not always pass!)
+basepython = python2.7
+commands =
+    bundletester -vl DEBUG -r json -o func-results.json --test-pattern "dev-*" --no-destroy
 
 [testenv:venv]
 commands = {posargs}
-
-[flake8]
-# E402 ignore necessary for path append before sys module import in actions
-ignore = E402
